kubernetes/airflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-service
  namespace: moment
  labels:
    app: airflow
spec:
  type: ClusterIP
  selector:
    app: airflow
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
